--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -1,10 +1,10 @@
 <ul class="list-group">
 	{%  for topic in topics %}
-		{% if topic|forumRight(app.user) %}
+		{% if is_granted('TOPIC_RIGHT',topic) %}
 			<li class="list-group-item">
 				<div class="row">
 									
-					<div class="col-xs-9 col-md-9">
+					<div class="col-xs-8 col-md-8">
 						<h5 class="list-group-item-heading">
 							<a href="{{ path('forum.topic', {index: topic.id}) }}">
 								{{ topic.title }}
@@ -23,7 +23,7 @@
 						{# nombre de sujets #}
 						{{ topic.posts|length }} Sujets
 					</div>
-					<div class="col-xs-2 col-md-2">
+					<div class="col-xs-3 col-md-3">
 						{# dernier message #}
 						
 						{% set lastPost = topic.posts|last %}
