--- a/src/LarpManager/Views/forum/post_update.twig
+++ b/src/LarpManager/Views/forum/post_update.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="{{ app.request.basepath }}/css/meltdown.css" />
 {% endblock head %}
 
-{% block title %}Forum - Répondre à un message{% endblock title %}
+{% block title %}Forum - Modification d'un message{% endblock title %}
 
 {% block content %}
 
@@ -17,29 +17,9 @@
 			{# le formulaire pour saisir son message #}
 			<div class="col-xs-12 col-md-8">
 				{{ include("forum/fragment/post_form.twig",{
-					'legend': 'Répondre à un message',
-					'action': path('forum.post.response', {'index': postToResponse.id}), 
+					'legend': 'Ajout d\'un message',
+					'action': path('forum.post.update', {'index': post.id}), 
 					'form' : form}) }}
-			</div>
-			
-			{# la liste des messages précédents #}
-			<div class="col-xs-12 col-md-4">
-				<div class="well">
-					<div class="list-group">
-						<div class="list-group-item">
-							<h4 class="list-group-item-heading">{{ postToResponse.title }}</h4>
-						</div>
-						{% for post in postToResponse.posts|reverse %}
-						<div class="list-group-item">
-							<p class="list-group-item-text">{{ post.text|markdown }}</p>
-						</div>	
-						{% endfor %}
-						
-						<div class="list-group-item">
-							<p class="list-group-item-text">{{ postToResponse.text|markdown }}</p>
-						</div>	
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
