--- a/src/LarpManager/Views/forum/topic.twig
+++ b/src/LarpManager/Views/forum/topic.twig
@@ -43,7 +43,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<div class="pull-right">
-						<small><a class="btn btn-primary" href="{{ path('forum.post.add', {'index':topic.id}) }}">Ajouter un nouveau message</a></small>
+						<small><a class="btn btn-primary" href="{{ path('forum.post.add', {'index':topic.id}) }}">Ajouter un nouveau sujet</a></small>
 					</div>
 					<h5>
 						Sujets de la catégorie : {{ topic.title }}
