Créer un nouveau forum a chaque nouvelle religion. Gestion des droits en fonction de la religion du personnage.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -39,6 +39,7 @@
 						<li><a href="{{ path('groupe') }}">Groupes</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
+						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
 					</ul>
 				</li>
 			{% endif %}
