correction de bugs

--- a/src/LarpManager/Views/groupe/joueur.twig
+++ b/src/LarpManager/Views/groupe/joueur.twig
@@ -50,7 +50,7 @@
 							<div class="list-group-item">
 								<h4 class="list-group-item-heading">Membres du groupe</h4>
 								<p class="list-group-item-text">
-									{{ groupe.users|join(', ') }}
+									{{ groupe.joueurs|join(', ') }}
 								</p>
 							</div>
 							
