Corrections de bugs. Un groupe peux être inscrit à plusieurs gns.

--- a/src/LarpManager/Views/gn/index.twig
+++ b/src/LarpManager/Views/gn/index.twig
@@ -9,7 +9,7 @@
 		<div class="col-xs-12 col-md-12">
 			<div class="well well-sm">
 				<h4>
-					Gestion des événements
+					Gestion des GNs
 					<small>
 						( {{ gns|length }} gns )
 					</small>
