--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -20,7 +20,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="{{ path('gn') }}">Evénements</a></li>
+						<li><a href="{{ path('gn') }}">GNs</a></li>
 						<li><a href="{{ path('groupe.place') }}">Places disponibles</a></li>
 						<li><a href="{{ path('joueur.xp') }}">Points d'expériences</a></li>
 						<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
