--- a/src/LarpManager/Views/error/layout.twig
+++ b/src/LarpManager/Views/error/layout.twig
@@ -11,8 +11,8 @@
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/normalize.css" />			                        
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/font-awesome.min.css" />
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap.min.css" />
-            <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap-theme.min.css" />
-            <link rel="stylesheet" href="{{ app.request.basepath }}/css/jquery.bootgrid.min.css" />
+            <link rel="stylesheet" href="{{ app.request.basepath }}/css/cyborg_bootstrap.min.css" />
+
             
             <title>{% block title %}{% endblock title %} - LarpManager</title>
         {% endblock head %}
